make some city handler
